catkin_ws/logs/backend/build.make.271.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘void logPoseGraphNode(const SLAM::Frame&, const Isometry3d&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:90:20: error: ‘frameNum’ was not declared in this scope
    << y  << "," << frameNum << endl; // note down quaternion or rpy? (should probably note down quaternion)
                    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:243:4: error: ‘frameNum’ was not declared in this scope
    frameNum = toNode;
    ^
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
